--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 # Command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install pep8
+  - pip install pylint
 
 # Allows the script to run
 
